mainIntro image changes

--- a/index.html
+++ b/index.html
@@ -37,5 +37,22 @@
             </ul>
         </nav>
     </header>
+    <section>
+        <div class="mainIntro">
+            <div class="introA">
+                <h1>
+                    Hi, my name is Sherlene.
+                </h1>
+                <h2>
+                    I am a UX/UI Designer looking to create innovative and enjoyable user experiences.
+                </h2>
+                <button type="button">My Work</button>
+                <button type="button">Let's Talk</button>
+            </div>
+            <div class="introB">
+                <img src="./images/FAC_WOODALL_SHERLENE (1).JPG" alt="myphoto">
+            </div>
+        </div>
+    </section>
 </body>
 </html>
